--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,22 @@
 
     <string name="movie_poster">Movie Poster</string>
     <string name="title_activity_detail">Movie Detail</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_sort">Sort</string>
+    <string name="pref_sort_label">Sort By</string>
+    <string name="pref_default">@string/pref_popularity</string>
+    <string name="pref_popularity">popularity.desc</string>
+    <string name="pref_highest_rated">vote_average.desc</string>
+
+    <string-array name="pref_sort_by">
+        <item>Popularity</item>
+        <item>Highest Rated</item>
+    </string-array>
+
+    <string-array name="pref_sort_values">
+        <item>@string/pref_popularity</item>
+        <item>@string/pref_highest_rated</item>
+    </string-array>
 
 </resources>
