--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_detail">Movie Detail</string>
     <string name="title_activity_settings">Settings</string>
 
+    <!-- Strings related to Settings Menu -->
     <string name="pref_sort">Sort</string>
     <string name="pref_sort_label">Sort By</string>
     <string name="pref_default">@string/pref_popularity</string>
