--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,9 @@
     <string name="pref_sort">Sort</string>
     <string name="pref_sort_label">Sort By</string>
     <string name="pref_default">@string/pref_popularity</string>
-    <string name="pref_popularity">popularity.desc</string>
-    <string name="pref_highest_rated">vote_average.desc</string>
+
+    <string name="pref_popularity">popular</string>
+    <string name="pref_highest_rated">top_rated</string>
 
     <string-array name="pref_sort_by">
         <item>Popularity</item>
